# simple-grpo

./: .gitignore  README.md  pyproject.toml  requirements.txt  train.ipynb  train.py
GRPO/: GRPO.py
grpo/: GRPO.py  cosine_annealing_with_warmup.py  function_calling.py  shorthand_operations.py
milestone-training/: data_loader.py
milestone_training/: data_loader.py  trainer.py
tool-call-training/: data_loader.py
