[project]
name = "simple-grpo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "einops>=0.8.1",
    "pandas>=2.3.3",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
]
